--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main">
+        <div> <button onclick="logout()"> Logout </button> </div>
     <h1> Hello User Name</h1>
     <div>
         <input type="text" id="input"> <button onclick="todo(event)"> Submit </button>
@@ -18,5 +19,5 @@
     </div>
 </div>
 </body>
-<script src="home.js"></script>
+<script type="module" src="home.js"></script>
 </html>
