--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <h2 style="text-align: center;"> SIGNUP FORM </h2>
     <div class="main">
-        <form action="" class="frm" onsubmit="signup(event)">
+        <form action="" class="frm" onsubmit="login(event)">
          <div>
                 <h3>Email </h3>
             </div>
@@ -23,10 +23,10 @@
                 <input class="inp" type="password" id="password" placeholder="Password*">
             </div>
             <div>
-              <button class="btn"> Signup </button>
+              <button class="btn"> Login </button>
             </div>
         </form>
     </div>
 </body>
-<script src="login.js"></script>
+<script type="module" src="login.js"></script>
 </html>
